k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-api-service
  namespace: task-manager

spec:
  type: NodePort

  selector:
    app: task-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
